--- a/resources/lang/ja.json
+++ b/resources/lang/ja.json
@@ -15,6 +15,6 @@
   "You are receiving this email because we received a password reset request for your account.": "あなたのアカウントでパスワード再設定のリクエストがありました。",
   "This password reset link will expire in :count minutes.": "このパスワード再設定リンクの有効期限は :count 分です。",
   "If you did not request a password reset, no further action is required.": "心当たりがない場合は、本メールを破棄してください。",
-  "Regards": "よろしくお願いいたします",
+  "Regards": "よろしくお願いいたします!",
   "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "「:actionText」ボタンを押しても何も起きない場合、以下のURLをコピーしてWebブラウザに貼り付けてください。"
 }
